--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
         </p>
         <div class="cta-buttons">
           <a href="#">Download App</a>
-          
         </div>
       </div>
 
@@ -252,11 +251,13 @@
           <!-- Optional: Google Map -->
           <div class="contact-map">
             <iframe
-              src="https://maps.google.com/maps?q=Coimbatore&t=&z=13&ie=UTF8&iwloc=&output=embed"
-              frameborder="0"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d710.0759387760816!2d77.35042143021057!3d11.106732086630664!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba907b9ed6b0a05%3A0x6fc5f96c883f20f5!2sSun%20Cool%20Sticker!5e1!3m2!1sen!2sus!4v1750062597699!5m2!1sen!2sus"
+              width="600"
+              height="450"
+              style="border: 0"
               allowfullscreen=""
-              aria-hidden="false"
-              tabindex="0"
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
           </div>
         </div>
