removed the download image

--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
         <a href="#" class="download-btn">Download App</a>
       </div>
 
-      <div class="download-image">
+      <!-- <div class="download-image">
         <img
-          src="https://raw.githubusercontent.com/uxwing/mockup-assets/main/phone-ui-mockup.png"
+          src="./images/download.png"
           alt="Aerocred app mockup"
         />
-      </div>
+      </div> -->
     </section>
 
     <section class="contact-section" id="contact">
