removed testimonials and added dsa partner benefits

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           leading banks. Simple process, trusted service, premium experience.
         </p>
         <div class="cta-buttons">
-          <a href="#">Download App</a>
+          <a href="./app/aerocred.apk">Download App</a>
         </div>
       </div>
 
@@ -157,57 +157,33 @@
       </div>
     </section>
 
-    <section class="testimonials" id="testimonials">
-      <div class="testimonials-header">
-        <h2>What Our Customers Say</h2>
-        <p>
-          Thousands trust Aerocred to simplify their loan journey and save
-          money. Here’s what a few of them had to say.
-        </p>
-      </div>
-
-      <div class="testimonials-grid">
-        <div class="testimonial-card">
-          <img
-            src="https://randomuser.me/api/portraits/women/44.jpg"
-            alt="Customer photo"
-            class="testimonial-avatar"
-          />
-          <p class="testimonial-text">
-            “Aerocred made the loan process unbelievably simple. I got approved
-            in just two days with a lower interest rate than my bank offered.”
-          </p>
-          <h4 class="testimonial-name">Priya M.</h4>
-          <span class="testimonial-role">Marketing Executive</span>
-        </div>
-
-        <div class="testimonial-card">
-          <img
-            src="https://randomuser.me/api/portraits/men/32.jpg"
-            alt="Customer photo"
-            class="testimonial-avatar"
-          />
-          <p class="testimonial-text">
-            “Using the app was so easy. I uploaded my documents and got
-            everything done from home. Highly recommend Aerocred!”
-          </p>
-          <h4 class="testimonial-name">Ravi Kumar</h4>
-          <span class="testimonial-role">Small Business Owner</span>
-        </div>
-
-        <div class="testimonial-card">
-          <img
-            src="https://randomuser.me/api/portraits/women/68.jpg"
-            alt="Customer photo"
-            class="testimonial-avatar"
-          />
-          <p class="testimonial-text">
-            “The support team was super helpful and responsive. The loan came
-            through quickly, and I saved a ton on interest.”
-          </p>
-          <h4 class="testimonial-name">Divya S.</h4>
-          <span class="testimonial-role">Freelancer</span>
-        </div>
+    <section class="dsa-benefits-section">
+      <div class="container">
+        <h2 class="section-title">DSA Partner's Benefits</h2>
+        <ul class="benefits-list">
+          <li class="benefit-item">
+            <span class="benefit-icon">✅</span>
+            <span class="benefit-text">Quick payout credits</span>
+          </li>
+          <li class="benefit-item">
+            <span class="benefit-icon">✅</span>
+            <span class="benefit-text">Easy Claim methods</span>
+          </li>
+          <li class="benefit-item">
+            <span class="benefit-icon">✅</span>
+            <span class="benefit-text"
+              >All over India bankers contact support</span
+            >
+          </li>
+          <li class="benefit-item">
+            <span class="benefit-icon">✅</span>
+            <span class="benefit-text">Anytime tele caller support</span>
+          </li>
+          <li class="benefit-item">
+            <span class="benefit-icon">✅</span>
+            <span class="benefit-text">Manual file tracking</span>
+          </li>
+        </ul>
       </div>
     </section>
 
@@ -218,7 +194,7 @@
           Apply for loans, upload documents, and get real-time updates — all
           from your phone.
         </p>
-        <a href="#" class="download-btn">Download App</a>
+        <a href="./app/aerocred.apk" class="download-btn">Download App</a>
       </div>
 
       <!-- <div class="download-image">
@@ -243,7 +219,8 @@
             <li><strong>📞 Phone:</strong> +91 90877 70870</li>
             <li><strong>📧 Email:</strong> info@aerocred.in</li>
             <li>
-              <strong>🏢 Address:</strong> 97, 98, Union Mill Road, KPN Colony, Tiruppur, Tamil Nadu
+              <strong>🏢 Address:</strong> 97, 98, Union Mill Road, KPN Colony,
+              Tiruppur, Tamil Nadu
             </li>
           </ul>
 
