removed address details

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav class="navbar-menu" id="navbar-menu">
           <a href="#about">About</a>
           <a href="#features">Features</a>
-          <a href="#testimonials">Testimonials</a>
+          <a href="#benefits">Benefits</a>
           <a href="#download">Download</a>
           <a href="#contact">Contact</a>
           <a href="#download" class="navbar-btn">Download App</a>
@@ -157,7 +157,7 @@
       </div>
     </section>
 
-    <section class="dsa-benefits-section">
+    <section class="dsa-benefits-section" id="benefits">
       <div class="container">
         <h2 class="section-title">DSA Partner's Benefits</h2>
         <ul class="benefits-list">
@@ -218,29 +218,15 @@
           <ul class="contact-details">
             <li><strong>📞 Phone:</strong> +91 90877 70870</li>
             <li><strong>📧 Email:</strong> info@aerocred.in</li>
-            <li>
-              <strong>🏢 Address:</strong> 97, 98, Union Mill Road, KPN Colony,
-              Tiruppur, Tamil Nadu
-            </li>
+            
           </ul>
 
-          <!-- Optional: Google Map -->
-          <div class="contact-map">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d710.0759387760816!2d77.35042143021057!3d11.106732086630664!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba907b9ed6b0a05%3A0x6fc5f96c883f20f5!2sSun%20Cool%20Sticker!5e1!3m2!1sen!2sus!4v1750062597699!5m2!1sen!2sus"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
+          
         </div>
 
         <!-- Contact Form -->
         <div class="contact-form">
-          <form>
+          <form action="https://formspree.io/f/xgvyzlbe" method="post">
             <input type="text" name="name" placeholder="Your Name" required />
             <input
               type="email"
